<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header_message">My Nanodegree Apps!</string>
    <string name="sportify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build">Build it Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
